Create list transaction flux (handles and adapters)
