# src/main/java/com/samuelbraga/pierpont/infrastructure/repositories/TransactionRepository.java
@@ -4,6 +4,11 @@ import com.samuelbraga.pierpont.infrastructure.repositories.entities.Transaction
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 
+import java.util.List;
+import java.util.Optional;
+
 @Repository
 public interface TransactionRepository
-  extends JpaRepository<Transaction, Long> {}
+  extends JpaRepository<Transaction, Long> {
+    List<Transaction> findAllByAccountId(Long accountId);
+}
